Move AladinLite map from GammaSkyAppComponent to AladinMapComponent

--- a/src/app/gamma-sky.component.html
+++ b/src/app/gamma-sky.component.html
@@ -1,5 +1,4 @@
 <h1>
   {{title}}
 </h1>
-
-<div id="aladin-lite-div" style="width:400px;height:400px;"></div>
+<app-aladin-map>Loading app-aladin-map ...</app-aladin-map>
