update angular package to rc4 as well as other packages, website version 0.0.1

--- a/src/app/about-button/about-button.component.html
+++ b/src/app/about-button/about-button.component.html
@@ -1,5 +1,5 @@
 
-<button id="aboutButton" (click)="aboutButtonClick()">About</button>
+<button id="aboutButton" (click)="onClick($event)">About</button>
 
 <div id="aboutInfo">
 
