--- a/src/app/switch-view/switch-view.component.html
+++ b/src/app/switch-view/switch-view.component.html
@@ -1,1 +1,5 @@
-<button id='switchViewButton' (click)='onClick($event)'>Go to {{notCurrentView}}</button>
+<div>
+  <button id='switchViewButton' (click)='onClick($event)'>
+    <b>Go to {{notCurrentView}}</b>
+  </button>
+</div>
