--- a/src/app/widgets/cat-search/cat-search.component.html
+++ b/src/app/widgets/cat-search/cat-search.component.html
@@ -5,6 +5,7 @@
     <option value="">Choose a catalog</option>
     <option value="3fgl">3FGL</option>
     <option value="2fhl">2FHL</option>
+    <option value="snrcat">SNRcat</option>
   </select>
-  
+
 </p>
