some fixes to PR

--- a/src/app/views/cat-view/cat-view.component.html
+++ b/src/app/views/cat-view/cat-view.component.html
@@ -2,7 +2,7 @@
   This is CatViewComponent
 </p>
 
-<switch-view [notCurrentView]="notCurrentView"></switch-view>
+<switch-view [selectedView]="selectedView"></switch-view>
 
 <cat-search></cat-search>
 
