--- a/src/app/views/map-view/map-view.component.html
+++ b/src/app/views/map-view/map-view.component.html
@@ -2,7 +2,7 @@
   This is MapViewComponent
 </p>
 
-<switch-view [notCurrentView]="notCurrentView"></switch-view>
+<switch-view [selectedView]="selectedView"></switch-view>
 
 <about-button></about-button>
 
