add aladin-lite-div and fix buttons

--- a/src/app/widgets/about-button/about-button.component.css
+++ b/src/app/widgets/about-button/about-button.component.css
@@ -1,4 +1,6 @@
 #aboutButton {
+  font-family: monospace;
+  font-size: 15px;
   color: black;
   position: absolute; /*This was commented out before*/
   border: none;
