--- a/src/app/widgets/about-button/about-button.component.html
+++ b/src/app/widgets/about-button/about-button.component.html
@@ -1,6 +1,8 @@
 <div (window:resize)="resize($event)">
 
-  <button id="aboutButton" (click)="onClick($event)" [style.right]="aboutButtonRight">{{changeButtonDisplay()}}</button>
+  <button id="aboutButton" (click)="onClick($event)" [style.right]="aboutButtonRight">
+    <b>{{changeButtonDisplay()}}</b>
+  </button>
 
   <div id="aboutInfo" [style.right]="aboutInfoRight" [style.width]="aboutInfoWidth">
 
