--- a/src/app/views/switch-view/switch-view.component.css
+++ b/src/app/views/switch-view/switch-view.component.css
@@ -1,11 +1,18 @@
 div {
   position: absolute;
   top: 10px;
-  right: 10px;
+  right: 0px;
+  width: 100px;
+  height: 50px;
+  /*padding: 0 1em 0 1em;*/
   z-index: 99999;
 }
-
 #switchViewButton {
   font-family: monospace;
   font-size: 15px;
+  position: absolute;
+  border: 2px solid rgb(50, 50, 50);
+  background-color: white;
+  opacity: 0.9;
+  height: 30px;
 }
