add all code for MapComponent (still needs to be organized a bit)

--- a/src/app/widgets/map/map.component.css
+++ b/src/app/widgets/map/map.component.css
@@ -13,3 +13,17 @@ html, body {
   position: relative;
   z-index: 0;
 }
+
+.aladin-popup {
+  width: 270px;
+  text-align: left;
+}
+
+table, table tbody {
+  width: 270px;
+  text-align: left;
+}
+
+table th {
+  height: 30px;
+}
