--- a/src/app/views/map-view/map-view.component.html
+++ b/src/app/views/map-view/map-view.component.html
@@ -1,5 +1,9 @@
-<map></map>
+<div id='background'>
 
-<switch-view [selectedView]="selectedView"></switch-view>
+  <map></map>
 
-<about-button></about-button>
+  <switch-view [selectedView]="selectedView"></switch-view>
+
+  <about-button></about-button>
+
+</div>
