--- a/src/app/widgets/map/map.component.css
+++ b/src/app/widgets/map/map.component.css
@@ -14,7 +14,7 @@ html, body {
   z-index: 0;
 }
 
-.aladin-popup {
+/*.aladin-popup {
   width: 270px;
   text-align: left;
 }
@@ -26,4 +26,4 @@ table, table tbody {
 
 table th {
   height: 30px;
-}
+}*/
