working load JSON data

--- a/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
@@ -1,3 +1,7 @@
 <p>
   This is CatSource3FGLComponent
 </p>
+
+<ul *ngIf="catalog">
+  <li *ngFor="let source of catalog">{{source.Source_Name}}</li>
+</ul>
