--- a/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
@@ -10,5 +10,5 @@
 <div *ngIf="selection">
   <h3>{{catalog.data[selection].data.Source_Name}}</h3>
   <p>{{catalog.data[selection].data.RAJ2000}}</p>
-  <p>{{catalog.data[selection].get_score()}}</p>
+  <p>{{catalog.data[selection].data.DEJ2000}}</p>
 </div>
