--- a/src/app/widgets/cat-search/cat-search.component.html
+++ b/src/app/widgets/cat-search/cat-search.component.html
@@ -1,24 +1,21 @@
-<p>
-  This is CatSearchComponent
+<!-- <p>
 
-  <!-- <select (change)="onSelectChange($event.target.value)">
+  <select (change)="onSelectChange($event.target.value)">
     <option value="">Choose a catalog</option>
     <option value="3fgl">3FGL</option>
     <option value="2fhl">2FHL</option>
     <option value="snrcat">SNRcat</option>
-  </select> -->
+  </select>
 
-  <!-- <select *ngIf="selectedCat=='3fgl'" (change)="onSelect($event.target.value)">
-    <option value="">Choose a source</option>
-    <option *ngFor="let source of catalog" value="{{source.id}}">{{source.Source_Name}}</option>
-  </select> -->
 
-</p>
 
-<div style="width:300px; margin-bottom:20px;">
+</p> -->
+
+<div style="width:300px; margin-bottom:20px;" *ngIf="catalog">
   <h3>Select a source:</h3>
 
-  <ng-select  [allowClear]='true'
+  <ng-select
+              [allowClear]='true'
               [items]='items'
               [disabled]='disabled'
               (data)='refreshValue($event)'
