--- a/src/app/views/switch-view/switch-view.component.css
+++ b/src/app/views/switch-view/switch-view.component.css
@@ -1,8 +1,10 @@
 div {
-  position: absolute;
+  /*-webkit-box-sizing: border-box;*/
+  box-sizing: content-box;
+  position: fixed;
   top: 10px;
-  right: 0px;
-  width: 100px;
+  right: 10px;
+  width: 150px;
   height: 50px;
   /*padding: 0 1em 0 1em;*/
   z-index: 99999;
@@ -10,9 +12,10 @@ div {
 #switchViewButton {
   font-family: monospace;
   font-size: 15px;
-  position: absolute;
+  position: fixed;
   border: 2px solid rgb(50, 50, 50);
   background-color: white;
   opacity: 0.9;
   height: 30px;
+  right: 10px;
 }
