--- a/src/app/widgets/cat-search/cat-search.component.html
+++ b/src/app/widgets/cat-search/cat-search.component.html
@@ -24,7 +24,7 @@
 </div>
 
 
-<div id='source-select' *ngIf="catalog">
+<div id='source-select'>
 
   <ng-select id='ng2-select'
     [allowClear]='true'
@@ -42,3 +42,5 @@
   <pre>{{value.text}}</pre> -->
 
 </div>
+
+<hr>
