--- a/src/app/widgets/cat-search/cat-search.component.css
+++ b/src/app/widgets/cat-search/cat-search.component.css
@@ -1,10 +1,14 @@
 #catalog-select {
   padding-top: 30px;
-}
-
-#catalog-select, #source-select {
   margin: auto;
   margin-bottom: 20px;
   text-align: center;
-  width: 300px;
+  width: 400px;
+}
+
+#source-select {
+  margin: auto;
+  margin-bottom: 20px;
+  text-align: center;
+  width: 320px;
 }
