--- a/src/app/widgets/cat-search/cat-search.component.html
+++ b/src/app/widgets/cat-search/cat-search.component.html
@@ -18,6 +18,9 @@
     <button class='btn btn-primary' [(ngModel)]="selectedCatalog" btnRadio="snrcat" uncheckable (click)='getCatalog("SNRcat")'>
       SNRcat
     </button>
+    <button class='btn btn-primary' [(ngModel)]="selectedCatalog" btnRadio="tev" uncheckable (click)='getCatalog("TeV")'>
+      TeV
+    </button>
 
   </div>
 
