--- a/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
+++ b/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
@@ -8,12 +8,12 @@
 
     <div class="col-md-6">
       <h3>Source Name:
-        {{catalog.getSourceByRowIndex(id).data.Source_Name}}</h3>
+        {{catalog.getSourceByID(id).data.Source_Name}}</h3>
       <ul>
         <li>RA:
-          {{catalog.getSourceByRowIndex(id).data.RA}}</li>
+          {{catalog.getSourceByID(id).data.RA}}</li>
         <li>DEC:
-          {{catalog.getSourceByRowIndex(id).data.DEC}}</li>
+          {{catalog.getSourceByID(id).data.DEC}}</li>
       </ul>
     </div>
 
@@ -25,10 +25,10 @@
     <div class="col-md-6">
       <h3>Full JSON data</h3>
       <pre>
-          {{ catalog.getSourceByRowIndex(id) | json }}
+          {{ catalog.getSourceByID(id) | json }}
       </pre>
     </div>
-    
-    
+
+
   </div>
 </div>
