--- a/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
@@ -1,14 +1,27 @@
-<p>
-  This is CatSource3FGLComponent
-</p>
-
-<!-- <select *ngIf="catalog" (change)="onSelect($event.target.value)">
-  <option value="">Choose a source</option>
-  <option *ngFor="let source of catalog.data" value="{{source.data.id}}">{{source.data.Source_Name}}</option>
-</select> -->
 
 <div *ngIf="(catalog)">
-  <h3>Source Name: {{catalog.data[id].data.Source_Name}}</h3>
-  <p> RA: {{catalog.data[id].data.RAJ2000}}</p>
-  <p>DEC: {{catalog.data[id].data.DEJ2000}}</p>
+
+  <div class="container">
+
+    <div class="col-md-6">
+      <h3>Source Name:
+        {{catalog.getSourceByID(id).data.Source_Name}}</h3>
+      <ul>
+        <li>RA:
+          {{catalog.getSourceByID(id).data.RAJ2000}}</li>
+        <li>DEC:
+          {{catalog.getSourceByID(id).data.DEJ2000}}</li>
+      </ul>
+    </div>
+
+    <div class="col-md-6">
+      <h3>Full JSON data</h3>
+      <pre>
+          {{ catalog.getSourceByID(id) | json }}
+      </pre>
+    </div>
+
+
+  </div>
+
 </div>
