--- a/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
@@ -12,6 +12,17 @@
         <li>DEC:
           {{catalog.getSourceByID(id).data.DEJ2000}}</li>
       </ul>
+
+    </div>
+
+    <div class="col-md-6">
+      <h3>Light Curve</h3>
+      <img src="{{getUrl(catalog.getSourceByID(id).data.Source_Name, 'lc')}}" class="img-responsive" alt="Generic placeholder thumbnail" />
+    </div>
+
+    <div class="col-md-6">
+      <h3>Spectrum</h3>
+      <img src="{{getUrl(catalog.getSourceByID(id).data.Source_Name, 'spec')}}" class="img-responsive" alt="Generic placeholder thumbnail" />
     </div>
 
     <div class="col-md-6">
