--- a/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
+++ b/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="col-md-6">
       <h3>{{catalog.getSourceByID(id).data.Source_Name}}</h3>
-      <h5>Basic Info</h5>
+      <h5>Basic info</h5>
       <ul>
           <li>Source name: {{catalog.getSourceByID(id).data.Source_Name}}</li>
           <li>Other names: {{catalog.getSourceByID(id).data.Other_Names}}</li>
@@ -10,14 +10,14 @@
           <li>TODO: add link to TeVCat</li>
           <li>TODO: add link to get data as JSON</li>
       </ul>
-      <h5>Position Info:</h5>
+      <h5>Position info:</h5>
       <ul>
           <li>RA: {{catalog.getSourceByID(id).data.RA}} deg</li>
           <li>DEC: {{catalog.getSourceByID(id).data.DEC}} deg</li>
           <li>GLON: {{catalog.getSourceByID(id).data.GLON}} deg</li>
           <li>GLAT: {{catalog.getSourceByID(id).data.GLAT}} deg</li>
       </ul>
-      <h5>Spectral Info:</h5>
+      <h5>Spectral info:</h5>
       <ul>
           <li>TODO</li>
       </ul>
