Fix unit in SNRcat template

--- a/src/app/widgets/cat-source/cat-source-snrcat/cat-source-snrcat.component.html
+++ b/src/app/widgets/cat-source/cat-source-snrcat/cat-source-snrcat.component.html
@@ -16,7 +16,7 @@
           <li>DEC: {{catalog.getSourceByID(id).data.DEJ2000}} deg</li>
           <li>GLON: {{catalog.getSourceByID(id).data.GLON}} deg</li>
           <li>GLAT: {{catalog.getSourceByID(id).data.GLAT}} deg</li>
-          <li>Size: {{catalog.getSourceByID(id).data.size_radio_mean}} deg</li>
+          <li>Size: {{catalog.getSourceByID(id).data.size_radio_mean}} arcmin</li>
       </ul>
     </div>
     
