--- a/src/app/widgets/cat-help/cat-help.component.html
+++ b/src/app/widgets/cat-help/cat-help.component.html
@@ -1,3 +1,8 @@
-<p>
-  This is CatHelpComponent
-</p>
+<div class="container">
+    <p>
+      Catalog help: coming soon!
+    </p>    
+    <p>
+        For now: just select a catalog and then a source above.
+    </p>
+</div>
