--- a/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
+++ b/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
@@ -36,7 +36,7 @@
           <li>Distance: {{ catalog.getSourceByID(id).distance_str()}} </li>
           <li>Redshift: {{catalog.getSourceByID(id).distance2_str()}}</li>
       </ul>
-      <h5>Othe info:</h5>
+      <h5>Other info:</h5>
       <ul>
           <li>Discoverer: {{ catalog.getSourceByID(id).data.Discoverer}} </li>
           <li>Observatory: {{ catalog.getSourceByID(id).data.Observatory}} </li>
@@ -50,6 +50,6 @@
     <div class="container">
         <p>
             Data from: <a href="http://www.asdc.asi.it/tgevcat/">TeGeV Catalogue @ ASDC (v2, July 2015)</a>
-        </p>        
+        </p>
     </div>
 </footer>
