--- a/src/app/widgets/about-button/about-button.component.css
+++ b/src/app/widgets/about-button/about-button.component.css
@@ -19,7 +19,7 @@
   width: 410px;
   bottom: 38px;
   right: 100px;
-  padding: 0 1em 0 1em;
+  padding: 1em 1em 0 1em;
   border: 2px solid rgb(50, 50, 50);
   background-color: white;
   opacity: 0.9;
