--- a/src/app/views/map-view/map-view.component.html
+++ b/src/app/views/map-view/map-view.component.html
@@ -1,5 +1,9 @@
-<!-- <p>
-  This is MapViewComponent
-</p> -->
+<div id='background'>
 
-<map></map>
+  <map></map>
+
+  <!-- <switch-view [selectedView]="selectedView"></switch-view> -->
+
+  <!-- <about-button></about-button> -->
+
+</div>
