add about button as AboutComponent

--- a/src/app/views/map-view/map-view.component.html
+++ b/src/app/views/map-view/map-view.component.html
@@ -4,6 +4,6 @@
 
   <!-- <switch-view [selectedView]="selectedView"></switch-view> -->
 
-  <!-- <about-button></about-button> -->
+  <about></about>
 
 </div>
