--- a/src/app/views/cat-view/cat-view.component.html
+++ b/src/app/views/cat-view/cat-view.component.html
@@ -1,3 +1,9 @@
 <p>
   cat-view works!
 </p>
+
+<!-- <switch-view [selectedView]="selectedView"></switch-view> -->
+
+<cat-search></cat-search>
+
+<!-- <router-outlet></router-outlet> -->
