add SharedModule, SwitchViewComponent

--- a/src/app/views/map-view/map-view.component.html
+++ b/src/app/views/map-view/map-view.component.html
@@ -2,7 +2,7 @@
 
   <map></map>
 
-  <!-- <switch-view [selectedView]="selectedView"></switch-view> -->
+  <switch-view [selectedView]="selectedView"></switch-view>
 
   <about></about>
 
