--- a/src/app/views/switch-view/switch-view.component.html
+++ b/src/app/views/switch-view/switch-view.component.html
@@ -1,3 +1,5 @@
-<p>
-  switch-view works!
-</p>
+<div>
+  <button id='switchViewButton' (click)='onClick($event)'>
+    <b>Go to {{buttonDisplay}}</b>
+  </button>
+</div>
