--- a/src/app/views/cat-view/cat-view.component.html
+++ b/src/app/views/cat-view/cat-view.component.html
@@ -2,8 +2,8 @@
   cat-view works!
 </p>
 
-<!-- <switch-view [selectedView]="selectedView"></switch-view> -->
+<switch-view [selectedView]="selectedView"></switch-view>
 
 <cat-search></cat-search>
 
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
