--- a/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
+++ b/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
@@ -7,12 +7,22 @@
           <li>Common name: {{catalog.getSourceByID(id).data.Source_Name}}</li>
           <li>Gamma names: {{catalog.getSourceByID(id).data.gamma_names}}</li>
           <li>Other names: {{catalog.getSourceByID(id).data.other_names}}</li>
-          <!-- <li>Class: {{catalog.getSourceByID(id).data.CLASS}}</li> -->
+          <li>Class: {{catalog.getSourceByID(id).class_str()}}</li>
           <li>TODO: add link to TeVCat</li>
           <li>TODO: add link to get data as JSON</li>
       </ul>
 
-<!-- TODO: Reformat info below to fit the new TeV data. -->
+      <h5>Position info:</h5>
+      <ul>
+          <li>RA: {{catalog.getSourceByID(id).ra_str()}}</li>
+          <li>DEC: {{catalog.getSourceByID(id).dec_str()}}</li>
+          <li>GLON: {{catalog.getSourceByID(id).glon_str()}}</li>
+          <li>GLAT: {{catalog.getSourceByID(id).glat_str()}}</li>
+      </ul>
+
+
+
+<!-- Commented code below is what we did for the old TeV catalog. -->
 
       <!-- <h5>Position info:</h5>
       <ul>
@@ -53,7 +63,7 @@
 <footer>
     <div class="container">
         <p>
-            Data from: <a href="http://www.asdc.asi.it/tgevcat/">TeGeV Catalogue @ ASDC (v2, July 2015)</a>
+            Data from: <a href="https://gammapy.github.io/gamma-cat/">gamma-cat, an open TeV source catalog</a>
         </p>
     </div>
 </footer>
