--- a/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
+++ b/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
@@ -5,8 +5,8 @@
       <h5>Basic info</h5>
       <ul>
           <li>Common name: {{catalog.getSourceByID(id).data.Source_Name}}</li>
-          <li>Gamma names: {{catalog.getSourceByID(id).data.gamma_names}}</li>
-          <li>Other names: {{catalog.getSourceByID(id).data.other_names}}</li>
+          <li>Gamma names: {{catalog.getSourceByID(id).gamma_names_str()}}</li>
+          <li>Other names: {{catalog.getSourceByID(id).other_names_str()}}</li>
           <li>Class: {{catalog.getSourceByID(id).class_str()}}</li>
           <li>TODO: add link to TeVCat</li>
           <li>TODO: add link to get data as JSON</li>
