--- a/src/app/widgets/about/about.component.html
+++ b/src/app/widgets/about/about.component.html
@@ -8,7 +8,7 @@
 
     <p>gamma-sky.net is an open-source and open-data webpage about the gamma-ray sky.</p>
 
-    <p>Read our full documentation <a href="https://github.com/gammapy/gamma-sky/wiki" target="_blank">here</a>.</p>
+    <p>Read our full documentation <a href="https://github.com/gammapy/gamma-sky/wiki" target="_blank">here</a>. Also check out our <a href="http://aip.scitation.org/doi/abs/10.1063/1.4969002" target="_blank">Gamma 2016 conference proceeding</a>.</p>
 
     <p>More coming soon!</p>
 
