--- a/src/app/widgets/cat-search/cat-search.component.html
+++ b/src/app/widgets/cat-search/cat-search.component.html
@@ -41,7 +41,7 @@
       (typed)='typed($event)'
       placeholder='No source selected'
       tooltip='Select a catalog first.'
-      [tooltipEnable]='tooltip'
+      [isDisabled]='tooltip'
     >
     </ng-select>
 
