fix URL link to SNRcat

--- a/src/app/widgets/cat-source/cat-source-snrcat/cat-source-snrcat.component.html
+++ b/src/app/widgets/cat-source/cat-source-snrcat/cat-source-snrcat.component.html
@@ -8,7 +8,7 @@
           <li>Source name: {{catalog.getSourceByID(id).data.Source_Name}}</li>
           <li>Other names: {{catalog.getSourceByID(id).data.id_alt}}</li>
           <li>
-            <a href="{{getSNRcatUrl(catalog.getSourceByID(id).data)}}" target="_blank">
+            <a href="{{getSNRcatUrl(catalog.getSourceByID(id))}}" target="_blank">
               View in SNRcat
             </a>
           </li>
